# zipgateway

./: CMakeLists.txt  Dockerfile  LICENSE  README  README.md  README.raspberry_pi  README.udp_relays  ZGW_3422.patch  docker-compose.yml  helper.mk  install.sh  jni-glue.c  pkgconfig.h  pkgconfig.h.cmake.in
contiki/: CMakeLists.txt  Makefile.include  checkout_contiki.bat
contiki/core/: contiki-lib.h  contiki-net-ipv4.h  contiki-net.h  contiki-version.h  contiki.h
libzwaveip/: .gitignore  CMakeLists.txt  README.md  pkgconfig.h  pkgconfig.h.cmake.in
libzwaveip/config/: ZWave_custom_cmd_classes.xml
libzwaveip/doc/: CMakeLists.txt  Doxyfile.in
libzwaveip/documentation/: Build-doxygen-documentation.md  Build-osx-ubuntu.md  Using-the-Example-Applications.md
libzwaveip/include/: ZW_classcmd.h  ZW_classcmd_ex.h  command_return_codes.h  libzw_log.h  libzwaveip.h  network_management.h  node_provisioning_list.h  tokenizer.h  unique_seqno.h  zconnection.h  zresource.h
libzwaveip/libedit/: chartype.c  common.c  readline.c  search.c  vi.c
libzwaveip/libzwaveip/: CMakeLists.txt  avahi-mdns.c  dnssd-mdns.c  libzw_log.c  libzwaveip.c  network_management.c  node_provisioning_list.c  ssldbg_utils.c  ssldbg_utils.h  zconnection-internal.h  zconnection.c  zresource-internal.h  zresource.c
libzwaveip/test/: CMakeLists.txt
libzwaveip/xml/: CMakeLists.txt  generate_c_decoder.py  parse_xml.c  parse_xml.h  zw_cmd_tool.c  zw_cmd_tool.h
src/: Bridge.c  Bridge.h  Bridge_ip_assoc.c  Bridge_ip_assoc.h  Bridge_temp_assoc.c  Bridge_temp_assoc.h  CC_FirmwareUpdate.c  CC_FirmwareUpdate.h  CC_Gateway.c  CC_Gateway.h  CC_InclusionController.c  CC_InclusionController.h  CC_Indicator.c  CC_Indicator.h  CC_InstallationAndMaintenance.c  CC_InstallationAndMaintenance.h  CC_ManufacturerSpecific.c  CC_Multicmd.c  CC_NetworkManagement.c  CC_NetworkManagement.h  CC_NetworkManagement_queue.c  CC_NetworkManagement_queue.h  CC_Portal.c  CC_Portal.h  CC_PowerLevel.c  CC_PowerLevel.h  CC_Supervision.c  CC_Time.c  CC_Version.c  CC_Wakeup.c  CC_Wakeup.h  CC_ZIPNaming.c  CC_ZWavePlus.c  CC_provisioning_list.c  CC_provisioning_list.h  CMakeLists.txt  ClassicZIPNode.c  ClassicZIPNode.h  DTLS_server.c  DTLS_server.h  (+87 more)
src/analyzer/: CMakeLists.txt  CommandAnalyzer.c  CommandAnalyzer.h  ZW_command_validator.h  cvalidator.xsl  extract_get.py  supported.csv
src/doc/: CMakeLists.txt  Doxyfile.in  backup_restore.dox  ep-probe.gv  groups.dox  main.dox.in  nms.gv  nms_add_mode.dox  nms_learn_mode.dox  nodeadd.gv  rd_cc_version_probe.dox  rd_probe1_node.dox  rd_probe2_ep.dox  style.css  zgw_data.dox  zipgateway.3
src/serialapi/: Makefile  Serialapi.c  Serialapi.h  Serialapi_ax110xx.c  conhandle.c  conhandle.h  nvm_tools.c  nvm_tools.h  port-timer-linux.c  port.h  sdk_versioning.c  sdk_versioning.h  serialapi_test.c  windows.c
src/transport/: S2_multicast_auto.c  S2_multicast_auto.h  S2_wrap.c  S2_wrap.h  Security_Scheme0.c  Security_Scheme0.h  ZW_PRNG.c  ZW_PRNG.h  ZW_SendDataAppl.c  ZW_SendDataAppl.h  ZW_SendRequest.c  ZW_SendRequest.h  gw_s2_keystore.h  rijndael-alg-fst.c  rijndael-alg-fst.h  s2_keystore.c  security_layer.c  security_layer.h  zw_frame_buffer.c  zw_frame_buffer.h
src/utls/: hex_to_bin.c  hex_to_bin.h  zgw_crc.c  zgw_crc.h  zgw_nodemask.c  zgw_nodemask.h  zgw_str.c  zgw_str.h
src/zwpgrmr/: Doxyfile  Makefile.usb_loader  crc32.c  crc32.h  linux_serial_interface.c  linux_serial_interface.h  linux_usb_interface.c  linux_usb_interface.h  usb_loader_part1.h  usb_loader_part1.hex  usb_loader_part2.h  usb_loader_part2.hex  zpg.c  zpg.h  zpgp.c  zpgp.h
systools/: CMakeLists.txt
systools/doc/: CMakeLists.txt  README.md  full_migration_example.json  json_schema_to_dox.py  migration.dox.in  systool-groups.dox  zgw_example.json  zgw_example_FullProbe.json  zgw_example_MinimalNoProbe.json  zgw_example_NoProbe.json  zgw_json.schema.json  zw_controller.schema.json
systools/libs/: CMakeLists.txt
systools/serial_log_decoder/: serial_log_decoder.py
systools/udprelay/: CMakeLists.txt  udprelay.c
systools/zgw_eeprom_2_25_to_2_61/: CMakeLists.txt  zgw_eeprom_2_25_to_2_61.c
systools/zgw_eeprom_to_sqlite/: CMakeLists.txt  RD_DataStore_Eeprom.c  RD_DataStore_Eeprom.h  RD_DataStore_Eeprom20.c  RD_DataStore_Eeprom20.h  RD_DataStore_legacy.h  zgw_eeprom_to_sqlite.c  zgw_smalloc_utils.cpp  zgw_smalloc_utils.h
systools/zgw_restore/: CMakeLists.txt  zgw_data.c  zgw_data.h  zgw_restore.c  zgw_restore.h  zgw_restore_cfg.c  zgw_restore_cfg.h  zgw_stub.c  zgwr_eeprom.c  zgwr_eeprom.h  zgwr_json_parser.c  zgwr_json_parser.h  zgwr_json_parser_helpers.c  zgwr_json_parser_helpers.h  zgwr_membuf_write.c  zgwr_pvl.c  zgwr_pvl.h  zgwr_serial.h  zgwr_serial_read.c  zw_data.c  zw_data.h
systools/zw_nvm_converter/: CMakeLists.txt  nvmconv_main.c
systools/zw_programmer/: CMakeLists.txt  readme.md  zw_programmer.c  zw_programmer.h
test/: CMakeLists.txt  eeprom-printer.c  eeprom-printer.h  eeprom-stub.c  mock_bridge_controller.c  mock_bridge_controller.h  mock_config.h  mock_conhandle.c  mock_conhandle.h  mock_contiki_autostart.h  mock_contiki_init.c  mock_contiki_loop.c  mock_contiki_main.c  mock_contiki_main.h  mock_parse_config.c  mock_parse_config.h  mock_rd.c  mock_tapdev.c  mock_tapdev.h  serialapi-stub.c  test_CC_helpers.c  test_CC_helpers.h  test_gw_helpers.c  test_gw_helpers.h  test_helpers.c  test_helpers.h  test_utils.c  test_utils.h  zipgateway_main_stubs.c  zipgateway_provisioning_list.cfg
test/CC_Indicator/: CMakeLists.txt  test_CC_Indicator.c
test/CC_Time/: CMakeLists.txt  test_CC_Time.c  test_CC_Time.h
test/CC_fw_upd/: CMakeLists.txt  test_gecko_fwu.c
test/CC_provisioning_list/: CMakeLists.txt  test_CC_provisioning_list.c  test_CC_provisioning_list2.c
test/DataStore/: CMakeLists.txt  test_datastore.c  test_smalloc.c
test/S0/: CMakeLists.txt  test_S0.c
test/ZIP_router/: CMakeLists.txt  test_CC_Multicmd.c  test_ZIP_router.c  test_s2_keystore.c  test_s2_wrap.c
test/command_class_validator/: CMakeLists.txt  test_command_class_validator.c
test/contiki/: CMakeLists.txt  hello.c  hello.h  (+4 more)
(+359 files in other folders)
